--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -119,7 +119,7 @@
 /* Barra inferior del footer */
 .footer-bottom-bar {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   border-top: 1px solid var(--color-surface);
   padding: 20px 0;
@@ -130,7 +130,7 @@
 
 .footer-logo-small {
   height: 40px;
-  filter: brightness(0) invert(1);
+  /* filter: brightness(0) invert(1); */
 }
 
 .footer-legal-btn {
@@ -165,7 +165,16 @@
     align-items: center;
   }
 
+  .footer-column a {
+    display: contents;
+  }
+
+  .footer-social{
+    display: contents;
+  }
   .footer-column {
+    flex:0;
+    text-align: center;
     width: 100%;
     max-width: 400px;
   }
